Fix class align-items

--- a/src/styles/common/global.scss
+++ b/src/styles/common/global.scss
@@ -312,7 +312,7 @@ button, input[type=button], input[type=submit] {
     justify-content: flex-end;
   }
 }
-.align-content {
+.align-items {
   &-between {
     align-items: space-between;
   }
@@ -327,12 +327,6 @@ button, input[type=button], input[type=submit] {
         align-items: center;
       }
     }
-  }
-}
-
-.align-items {
-  &-center {
-    align-items: center;
   }
 }
 
